Closed Bug 390629 Opened 17 years ago Closed 17 years ago

ARIA trees not providing state EXPANDABLE

Categories

(Core :: Disability Access APIs, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: scott, Assigned: aaronlev)

References

(Blocks 2 open bugs)

Details

Attachments

(1 file)

The ARIA tree shown here http://archive.dojotoolkit.org/nightly/dojotoolkit/dijit/tests/test_Tree.html is not providing state EXPANDABLE for branches that are expandable.  They are however providing state EXPANDED and an object:state-changed:expanded event.
Blocks: aria
Does this one work?
http://www.mozilla.org/access/dhtml/class/tree

I think maybe they forgot to put aaa:expanded="false" on the ones that are potentially expandable. It's different from leaving aaa:expanded out entirely.
Simon, can you look at comment 1 and let us know if that's the problem?
(In reply to comment #1)
> Does this one work?
> http://www.mozilla.org/access/dhtml/class/tree
> 
Same results as dojo tree.

Yep, that's a legit bug! Nice catch!

We didn't see that in MSAA because there is no EXPANDABLE state there.
Attachment #274944 - Flags: review?(surkov.alexander)
Comment on attachment 274944 [details] [diff] [review]
Get ARIA state before computing EXPANDABLE!

Right. Some time before I thought to do myself but I didn't know usecase :).
Attachment #274944 - Flags: review?(surkov.alexander) → review+
Attachment #274944 - Flags: approval1.9?
Drivers: extremely low risk
Attachment #274944 - Flags: approval1.9? → approval1.9+
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: