Bug 390629. ARIA trees not providing STATE_EXPANDABLE. r=surkov.alexander, a=dsicore